// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for the single comment component should call toast error when server error occurs 1`] = `
<CreateComment
  addComment={[MockFunction]}
  articleId="8ee5e8ed-ecdf-41c1-9b94-6c6bb712a77a"
>
  <Comment
    handleOnClick={[Function]}
  >
    <div
      className="comment-create-field"
    >
      <TextAreaInput
        className="article-comment-field undefined"
        onChange={[Function]}
        placeHolder="Your message"
        placeholder="Your message"
        value=""
      >
        <textarea
          className="textarea-input article-comment-field undefined"
          onChange={[Function]}
          placeholder="Your message"
          value=""
        />
      </TextAreaInput>
      <Button
        className="article-comment-field__button"
        isRequestSent={false}
        onClick={[Function]}
        type="submit"
        value="submit"
      >
        <button
          className="article-comment-field__button"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          submit
        </button>
      </Button>
    </div>
  </Comment>
</CreateComment>
`;

exports[`Test for the single comment component should render the Comment Component 1`] = `
<Comment
  handleOnClick={[MockFunction]}
  id="string"
>
  <div
    className="comment-create-field"
  >
    <TextAreaInput
      className="article-comment-field string"
      onChange={[Function]}
      placeHolder="Your message"
      placeholder="Your message"
      value=""
    >
      <textarea
        className="textarea-input article-comment-field string"
        onChange={[Function]}
        placeholder="Your message"
        value=""
      />
    </TextAreaInput>
    <Button
      className="article-comment-field__button"
      isRequestSent={false}
      onClick={[Function]}
      type="submit"
      value="submit"
    >
      <button
        className="article-comment-field__button"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        submit
      </button>
    </Button>
  </div>
</Comment>
`;

exports[`Test for the single comment component should show a toast error when user is not logged in 1`] = `
<CreateComment
  addComment={[MockFunction]}
  articleId="8ee5e8ed-ecdf-41c1-9b94-6c6bb712a77a"
>
  <Comment
    handleOnClick={[Function]}
  >
    <div
      className="comment-create-field"
    >
      <TextAreaInput
        className="article-comment-field undefined"
        onChange={[Function]}
        placeHolder="Your message"
        placeholder="Your message"
        value=""
      >
        <textarea
          className="textarea-input article-comment-field undefined"
          onChange={[Function]}
          placeholder="Your message"
          value=""
        />
      </TextAreaInput>
      <Button
        className="article-comment-field__button"
        isRequestSent={false}
        onClick={[Function]}
        type="submit"
        value="submit"
      >
        <button
          className="article-comment-field__button"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          submit
        </button>
      </Button>
    </div>
  </Comment>
</CreateComment>
`;
